improve server structure with services and improve validation in controllers
