# src/utils/validators/auth-validator.js
@@ -1,0 +1,8 @@
+const Joi = require('Joi');
+
+module.exports = {
+    auth: {
+        email: Joi.string().email().required(),
+        password: Joi.string().regex(/^[a-zA-Z0-9]{8,30}/).required()
+    },
+}
